// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionDivider With inline title should render correctly 1`] = `
.c0 {
  position: relative;
}

.c0::before {
  content: '';
  position: absolute;
  height: 1px;
  border: none;
  background: #BABABA;
  left: 0px;
  right: 0px;
  top: 12px;
}

.c1 {
  position: relative;
  display: inline;
  background-color: #fff;
}

html:not([dir='rtl']) .c1 {
  padding-right: 8px;
}

html[dir='rtl'] .c1 {
  padding-left: 8px;
}

.c2 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  display: inline-block;
  margin-top: 0px;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0::before {
    top: 12px;
  }
}

@media (min-width:37.5rem) {
  .c0::before {
    top: 14px;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      This is text in a SectionDivider.
    </h2>
  </div>
</div>
`;

exports[`SectionDivider With inline title should render correctly with arabic script typography values 1`] = `
.c0 {
  position: relative;
}

.c0::before {
  content: '';
  position: absolute;
  height: 1px;
  border: none;
  background: #BABABA;
  left: 0px;
  right: 0px;
  top: 16px;
}

.c1 {
  position: relative;
  display: inline;
  background-color: #fff;
}

html:not([dir='rtl']) .c1 {
  padding-right: 8px;
}

html[dir='rtl'] .c1 {
  padding-left: 8px;
}

.c2 {
  font-size: 1.5rem;
  line-height: 2rem;
  color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  display: inline-block;
  margin-top: 0px;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0::before {
    top: 14px;
  }
}

@media (min-width:37.5rem) {
  .c0::before {
    top: 14px;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      بعض محتوى النص
    </h2>
  </div>
</div>
`;

exports[`SectionDivider With title should render correctly 1`] = `
.c0 {
  position: relative;
}

.c0::before {
  content: '';
  position: absolute;
  height: 1px;
  border: none;
  background: #BABABA;
  left: 0px;
  right: 0px;
  top: 0px;
}

.c1 {
  position: relative;
  display: inline;
  background-color: #fff;
}

html:not([dir='rtl']) .c1 {
  padding-right: 8px;
}

html[dir='rtl'] .c1 {
  padding-left: 8px;
}

.c2 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  display: inline-block;
  margin-top: 0px;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      This is text in a SectionDivider.
    </h2>
  </div>
</div>
`;

exports[`SectionDivider With title should render correctly with arabic script typography values 1`] = `
.c0 {
  position: relative;
}

.c0::before {
  content: '';
  position: absolute;
  height: 1px;
  border: none;
  background: #BABABA;
  left: 0px;
  right: 0px;
  top: 0px;
}

.c1 {
  position: relative;
  display: inline;
  background-color: #fff;
}

html:not([dir='rtl']) .c1 {
  padding-right: 8px;
}

html[dir='rtl'] .c1 {
  padding-left: 8px;
}

.c2 {
  font-size: 1.5rem;
  line-height: 2rem;
  color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  display: inline-block;
  margin-top: 0px;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      بعض محتوى النص
    </h2>
  </div>
</div>
`;

exports[`SectionDivider Without title should render correctly 1`] = `
.c0 {
  position: relative;
}

.c0::before {
  content: '';
  position: absolute;
  height: 1px;
  border: none;
  background: #BABABA;
  left: 0px;
  right: 0px;
  top: 0px;
}

.c1 {
  position: relative;
  display: inline;
  background-color: #fff;
}

html:not([dir='rtl']) .c1 {
  padding-right: 8px;
}

html[dir='rtl'] .c1 {
  padding-left: 8px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    
  </div>
</div>
`;
